dev/kustomize/am/base/openam-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: am
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: am
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /am/isAlive.jsp
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        name: openam
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /am/isAlive.jsp
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            memory: 1000Mi
          requests:
            memory: 900Mi
        volumeMounts:
        - mountPath: /var/run/secrets/configstore
          name: idrepo-secret
        - mountPath: /var/run/secrets/openam/keystore
          name: am-keys
        - mountPath: /var/run/secrets/openam/password
          name: am-keystore-passwords
      terminationGracePeriodSeconds: 10
      volumes:
      - name: am-keys
        secret:
          secretName: am-keys
      - name: am-keystore-passwords
        secret:
          secretName: am-keystore-passwords
      - name: idrepo-secret
        secret:
          secretName: idrepo
      - configMap:
          name: boot-json
        name: openam-boot
